# chip8-emulator

./: .gitignore  Cargo.toml  README.md
.github/workflows/: rust.yml
src/: cpu.rs  error.rs  helper.rs  main.rs  rom.rs
