[package]
name = "chip8-emulator"
version = "1.0.0"
edition = "2021"
authors = ["Micheal Earl <michealearldev@gmail.com>"]
description = "A CHIP-8 CPU emulator written in Rust"
repository = "https://github.com/micheal-earl/chip8-emulator"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
minifb = "0.28.0"
tinyaudio = "1.1.0"
